...
	<string name="on_timeout">Task timeout, check Internet connection</string>
	<string name="user_image">User image</string>

	<!-- Actions -->
	<string name="guardar">Save</string>
	<string name="eliminar">Remove</string>
	<string name="cancelar">Cancel</string>
	<string name="start">Start</string>
	<string name="stop">Stop</string>
	<string name="salir">Exit anyway</string>
	<string name="ver_mapa">Show map</string>
	<string name="buscar">Search</string>
	<string name="stop_geotracking">Stop tracking</string>
	<string name="stop_geofencing">Stop alerts</string>
	<string name="start_geofencing">Start alerts</string>
	<string name="actualizar_posicion">Refresh location</string>
	<string name="geofencing_service">Geofencing service</string>
	<string name="geofencing_service_stoping">Stoping geofencing service…</string>
    <string name="geotracking_service">Tracking service</string>
	<string name="geotracking_service_stoping">Stoping tracking service…</string>

	<!-- Items -->
	<string name="lugares">Points</string>
	<string name="rutas">Routes</string>
	<string name="avisos">Alerts</string>

	<!-- Editar -->
	<string name="editar">Edit</string>
	<string name="editar_aviso">Edit Alert</string>
	<string name="editar_lugar">Edit Point</string>
	<string name="editar_ruta">Edit Route</string>

	<!-- Fecha -->
	<string name="fecha_desde">From</string>
	<string name="fecha_hasta">to</string>
	<string name="fin">End: </string>
	<string name="ini">Ini: </string>
...

	<!-- Title -->
	<string name="title_activity_act_aviso">Alert</string>
	<string name="title_activity_act_buscar">Search</string>
	<string name="title_activity_act_config">Settings</string>
	<string name="title_activity_act_lugar">Point</string>
	<string name="title_activity_act_main">Find me!</string>
	<string name="title_activity_act_maps">Map</string>
	<string name="title_activity_act_ruta">Route</string>
	<string name="title_act_imagen">Picture</string>

	<!-- Imagen -->
	<string name="imagen">Picture</string>
...
	<string name="ok_eliminar_ruta">The Route was deleted</string>
	<string name="ok_guardar_aviso">The Alert was saved</string>
	<string name="ok_guardar_lugar">The Point was saved</string>
	<string name="ok_guardar_ruta">The Route was saved</string>

	<!-- Ask -->
	<string name="seguro_eliminar">Are you sure you want to remove?</string>
	<string name="seguro_eliminar_pto">Are you sure you want to remove the point?</string>
	<string name="seguro_salir">You made changes. Do you want to save?</string>
	<string name="ask_to_ignore_energy_saving_again">The tracking will stop in doze mode if battery optimizations are on. Are you sure?</string>
	<string name="ask_to_enable_gps">The geofencing service needs the GPS on</string>
	<string name="permission_required">The permission is required to use the app</string>
	<string name="permission_required_title">Grant permission?</string>

	<!-- Sin -->
...
