<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context="com.cesoft.encuentrame3.ActLugar"
	tools:showIn="@layout/act_lugar">


	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/txtNombre_"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_alignParentEnd="true"
		android:layout_alignParentTop="true" >
		<EditText
			android:id="@+id/txtNombre"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ems="10"
			android:hint="@string/nombre"
			android:maxLines="1"
			android:inputType="textCapWords"
			android:importantForAutofill="no" />
	</com.google.android.material.textfield.TextInputLayout>


	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/txtDescripcion_"
		android:layout_below="@+id/txtNombre_"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignParentStart="true" >
		<EditText
			android:id="@+id/txtDescripcion"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/descripcion"
			android:ems="10"
			android:inputType="textMultiLine|textCapSentences"
			android:maxLines="3"
			android:importantForAutofill="no" />
	</com.google.android.material.textfield.TextInputLayout>

	<!-- DATE CREATED and MODIFIED ? -->

	<LinearLayout
		android:id="@+id/layPosicion"
		android:layout_below="@+id/txtDescripcion_"
		android:orientation="horizontal"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp">

		<TextView
			android:id="@+id/lblPosicion_"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:text="@string/lat_lon"
			android:layout_marginEnd="5dp"
			android:layout_gravity="center_vertical"/>
		<TextView
			android:id="@+id/lblPosicion"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_marginEnd="2dp"
			android:textIsSelectable="true"
			android:text=""
			android:layout_gravity="center_vertical"/>
		<ImageButton
			android:id="@+id/btnActPos"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="2dp"
			android:layout_gravity="center_vertical"
			android:contentDescription="@string/actualizar_posicion"
			android:src="@android:drawable/ic_menu_mylocation"
			style="@style/btnStyle"/>
	</LinearLayout>


	<fragment
		android:id="@+id/map"
		android:layout_below="@+id/layPosicion"
		class="com.google.android.gms.maps.SupportMapFragment"
		android:layout_marginTop="5dp"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".ActLugar" />

</RelativeLayout>
